# raw_langchain

./: .dockerignore  .env  .env.dist  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  tests.yml
agents/config/: demo_agent.json  demo_llamaindex_agent.json
agents/langgraph/demo/: __init__.py  demo_graph.py
agents/langgraph/demo/tools/: __init__.py  tools.py
agents/llamaindex/demo/: demo_agent.py  tools.py
agents/prompt/: demo_agent.json  demo_llamaindex_agent.json
app/: __init__.py
app/agent/: factory.py  prompt.py  state.py
app/agent/checkpoint/: __init__.py  base.py  factory.py  memory.py  postgres.py  providers.py
app/agent/config/: __init__.py  loader.py  models.py
app/agent/frameworks/: base.py  google_adk.py  langgraph.py  llamaindex.py
app/agent/frameworks/langgraph_framework/: graph.py
app/agent/frameworks/langgraph_framework/checkpoint/: factory.py  memory.py  postgres.py
app/agent/graph/: __init__.py  base_state.py  demo_graph.py  graph.py
app/agent/graph/demo/: __init__.py  demo_graph.py  state.py
app/agent/graph/demo/tools/: tools.py
app/agent/guards/: LLMGuard.py  __init__.py
app/agent/langgraph/: graph.py
app/agent/langgraph/checkpoint/: __init__.py  factory.py  memory.py  postgres.py
app/agent/langgraph/demo/: __init__.py  demo_graph.py
app/agent/langgraph/utils/: __init__.py
app/agent/models/: ChatMessage.py  __init__.py  ai_message.py  chat_message.py  custom_ui_message.py  human_message.py  model_config.py  token.py  tool_call.py  tool_result.py
app/agent/services/: __init__.py  agent_service.py  stream_processor.py
app/agent/services/events/: __init__.py  base_event.py  end_event.py  error_event.py  token_event.py
app/agent/tools/: tools.py
app/agent/utils/: utils.py
app/app/: __init__.py  app_factory.py  config.py
app/bootstrap/: __init__.py  app_factory.py  config.py
app/http/: __init__.py
app/http/controllers/: __init__.py  chat_controller.py  thread_controller.py
app/http/middleware/: __init__.py  auth.py  auth_middleware.py  cors_middleware.py
app/http/requests/: __init__.py  chat_request.py  feedback_request.py  run.py
app/http/responses/: __init__.py  chat_history.py  error_response.py
app/http/routes/: __init__.py  chat_routes.py  health_routes.py  runs_routes.py  thread_routes.py
app/infrastructure/: __init__.py
app/infrastructure/database/: __init__.py  connection.py  postgresql_connection.py
app/middleware/: __init__.py  auth_middleware.py  cors_middleware.py
app/models/: __init__.py  ai_message.py  thread.py  thread_repository.py  tool_call.py  tool_result.py  user.py  user_repository.py
app/repositories/: __init__.py  thread_repository.py  user_repository.py
app/routes/: __init__.py  chat_routes.py  health_routes.py
app/services/: __init__.py  agent_service.py
app/utils/: __init__.py  logger.py  utils.py
frontend/: README.md  package-lock.json  package.json  webpack.config.js
frontend/src/: app.js  index.html  styles.css
frontend/src/components/: ChatApp.jsx  ConnectionStatus.jsx  Message.jsx  MessageActions.jsx  ThinkingMessage.jsx  UIMessage.jsx  index.js
frontend/src/components/ui/: FileUpload.jsx  index.js
frontend/src/constants/: constants.js
frontend/src/hooks/: index.js  useSSE.js
frontend/src/store/: chatStore.js  index.js
tests/agent/services/: test_agent_service.py  test_stream_processor.py
