[project]
name = "raw-langchain"
version = "0.0.1"
description = "A test application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.14",
    "langchain>=0.3.26",
    "langchain-core==0.3.69",
    "langchain-openai>=0.3.27",
    "langfuse>=3.1.3",
    "langgraph==0.5.3",
    "langgraph-checkpoint-postgres>=2.0.22",
    "opentelemetry-instrumentation-fastapi>=0.55b1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg[binary,pool]>=3.2.9",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "sse-starlette==2.4.1",
    "uvicorn>=0.35.0",
]
