[project]
name = "raw-langchain"
version = "0.0.1"
description = "A test application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "fastapi>=0.115.14",
    "langchain>=0.3.26",
    "langchain-core==0.3.69",
    "langchain-openai>=0.3.27",
    "langfuse>=3.1.3",
    "langgraph==0.5.3",
    "langgraph-checkpoint-postgres>=2.0.22",
    "mypy>=1.17.0",
    "opentelemetry-instrumentation-fastapi>=0.55b1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg[binary,pool]>=3.2.9",
    "pyright>=1.1.403",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "ruff>=0.12.5",
    "sse-starlette==2.4.1",
    "uvicorn>=0.35.0",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "T20"]
ignore = ["E501"]
